# gentoo-cleaner

./: .gitignore  Cargo.toml  README.md  build.rs
src/: checks.rs  cleaner.rs  folder.rs  logger.rs  main.rs
